lib/stratiform/res/test/stratiform/corpus/pos/schema-with-default-value.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name with-default

document
  field name Identifier my-default-name
